--- a/.github/workflows/ladbrokes.yml
+++ b/.github/workflows/ladbrokes.yml
@@ -1,57 +1,63 @@
 name: Greyhounds — Auto Discover & Scrape (Ladbrokes)
 
 on:
+  # Manual run button in Actions tab
   workflow_dispatch:
+  # Optional daily schedule (04:10 UTC) — adjust or remove if you like
   schedule:
-    - cron: "10 4 * * *"   # 04:10 UTC daily
+    - cron: "10 4 * * *"
 
 permissions:
-  contents: write
+  contents: write   # allow committing scraped files back to the repo
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
+      - name: Install Python deps (incl. Playwright)
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install requests beautifulsoup4 lxml pandas
+          # Your requirements (ignore if missing)
+          pip install -r requirements.txt || true
+          # Browser automation + handy libs
+          pip install playwright beautifulsoup4 lxml pandas requests
+          # Install Chromium and its system deps for the runner
+          python -m playwright install --with-deps chromium
 
-      - name: Ensure output folder exists
+      - name: Ensure output folder
         run: mkdir -p data/ladbrokes
 
-      - name: Auto-discover meetings and scrape odds
+      - name: Auto-discover meetings and scrape odds (Playwright)
+        env:
+          # Optional but recommended — set in Settings → Secrets → Actions
+          LADBROKES_COOKIE: ${{ secrets.LADBROKES_COOKIE }}
         run: |
           set -euo pipefail
-          python src/ladbrokes_auto.py --out-dir data/ladbrokes
+          python src/ladbrokes_play.py --out-dir data/ladbrokes
 
       - name: Show output (list files & preview)
         if: always()
         run: |
-          echo "PWD=$(pwd)"
-          echo "== data/ =="
-          ls -lah data || true
-          echo "== data/ladbrokes/ =="
-          ls -lah data/ladbrokes || true
-          echo "== Preview a JSON (if any) =="
-          set +e
-          f=$(ls -1t data/ladbrokes/meetings_*.json 2>/dev/null | head -n1)
-          if [ -n "${f:-}" ]; then head -n 80 "$f"; else echo "No meetings_*.json found"; fi
+          echo "::group::Tree"
+          ls -lahR data/ladbrokes || true
+          echo "::endgroup::"
+          echo "::group::Preview JSON"
+          for f in $(ls data/ladbrokes/meetings_*.json 2>/dev/null | tail -n 3); do
+            echo "---- $f ----"
+            head -n 80 "$f"
+          done || true
+          echo "::endgroup::"
 
       - name: Upload artifacts
-        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: ladbrokes-output
@@ -59,20 +65,12 @@ jobs:
             data/ladbrokes/**/*.json
             data/ladbrokes/**/*.html
           if-no-files-found: warn
+          retention-days: 7
 
       - name: Commit results to repo
-        env:
-          BRANCH: ${{ github.ref_name }}
         run: |
-          set -euo pipefail
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git config --global user.name  "github-actions[bot]"
-          echo "Staging files (force to bypass ignore rules) ..."
-          git add -A -f data/ladbrokes
-          if git diff --cached --quiet; then
-            echo "Nothing to commit."
-            exit 0
-          fi
-          git commit -m "Scrape: $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
-          git pull --rebase origin "$BRANCH" || true
-          git push origin HEAD:"$BRANCH"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add data/ladbrokes || true
+          git commit -m "Ladbrokes scrape $(date -u +'%Y-%m-%dT%H:%M:%SZ')" || echo "Nothing to commit"
+          git push || echo "No changes to push"
